Ticket #28474: CSS class name changes to the BEM syntax.

--- a/com.top_logic.themes.core/src/main/webapp/WEB-INF/themes/core/com.top_logic.layout.buttonbar.Icons.BUTTON_BAR_TEMPLATE.template.html
+++ b/com.top_logic.themes.core/src/main/webapp/WEB-INF/themes/core/com.top_logic.layout.buttonbar.Icons.BUTTON_BAR_TEMPLATE.template.html
@@ -4,7 +4,7 @@
 			{buttons}
 			<div class="tlDropdown">
     			<a class="tlButton tlDropdownButton" href="#" onclick="services.viewport.openButtonComponentsDropdown(this)">
-      				<span class="cmdImg">
+      				<span class="tl-cmd-button__img">
       					<i class="bi bi-three-dots-vertical"></i>
       				</span>
     			</a>
